--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
           <p class="main-text">
           This is very <strong>strong</strong> text, because this is <strong>bold.</strong>  
-          i like<em> emphasise</em> text.
+          i like this<em> emphasise</em> text.
 
 
 
